# crs-api

./: .gitignore  LICENSE  Makefile  README.md  dev.env  docker-compose.yml  manage.py  pyproject.toml  sonar-project.properties
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: sonarqube-scanner.yaml
apps/booking/: admin.py  apps.py  converters.py  decorators.py  documents.py  managers.py  models.py  serializers.py  urls.py  utils.py  views.py  viewsets.py
apps/booking/application/: ping_service.py
apps/booking/infrastructure/: ping_view.py
apps/booking/migrations/: 0001_initial.py  0002_alter_inventory_date_alter_rate_room.py  0003_alter_hotel_name_alter_rate_name_alter_room_name.py  0004_alter_hotel_code_alter_hotel_name_alter_rate_code_and_more.py  0005_alter_hotel_code_alter_rate_code_alter_room_code.py  0006_auto_20221130_1656.py  0007_alter_rate_room.py
docker/: Dockerfile
project/: settings.py  urls.py
tests/booking/: test_models.py  test_views.py  test_viewsets.py
tests/booking/application/: test_ping_service.py
tests/booking/infrastructure/: test_ping_view.py
